// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange should render empty 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 iNqwXn flex w-12"
          disabled=""
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              chevron-left-small.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
            data-testid="navigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
            data-testid="navigationBar__notifications"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
            data-testid="navigationBar__userInfo"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-2xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Choose one of the exchange providers below to swap directly from within the wallet.
              </div>
            </div>
          </div>
        </div>
      </div>
      <nav
        class="ExchangeNavigationBar__NavWrapper-sc-14kvz9e-0 jmecXr"
      >
        <div
          class="container flex justify-between items-center px-10 mx-auto"
        >
          <div
            class="-mx-6 w-full"
          >
            <div
              class="Tabs__TabList-sc-1t8sbwb-1 bVYhpi w-full h-18"
            >
              <button
                aria-selected="true"
                class="Tabs__TabButton-sc-1t8sbwb-0 ring-focus"
                data-ring-focus-margin="-mx-3"
                data-testid="tabs__tab-button-EXCHANGES"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span>
                  Exchanges
                </span>
              </button>
              <button
                aria-selected="false"
                class="Tabs__TabButton-sc-1t8sbwb-0 ring-focus"
                data-ring-focus-margin="-mx-3"
                data-testid="tabs__tab-button-TRANSACTIONS"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span>
                  Transactions
                </span>
                <span
                  class="py-0.5 px-1.5 ml-2 text-sm font-semibold rounded bg-theme-primary-100 dark:bg-theme-secondary-900"
                  data-testid="tabs__tab-button-TRANSACTIONS-count"
                >
                  0
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="border border-solid border-theme-secondary-300 dark:border-theme-secondary-800 rounded-lg text-theme-secondary-text text-center leading-5 p-6"
            data-testid="ExchangeGrid__empty-message"
          >
            <div>
              There are currently no exchange providers available, please try again at a later time.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Exchange should render with exchanges 1`] = `
<div>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBar__NavWrapper-sc-1nkmx4c-0 nFzZM"
    >
      <div
        class="flex relative h-21"
      >
        <button
          class="BackButton__StyledBackButton-sc-18ta3r7-0 iNqwXn flex w-12"
          disabled=""
        >
          <div
            class="sc-bdnxRM AkeAK mx-auto"
            height="10"
            width="10"
          >
            <svg>
              chevron-left-small.svg
            </svg>
          </div>
        </button>
        <div
          class="flex flex-1 px-8"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="NavigationBar__LogoContainer-sc-1nkmx4c-1 bfIa-di"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex mr-auto ml-4 space-x-8 h-21"
            data-testid="navigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                aria-current="page"
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus active"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex relative items-center font-semibold transition-colors duration-200 focus:outline-none text-md text-theme-secondary-text ring-focus"
                data-ring-focus-margin="-mx-2"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
            data-testid="navigationBar__notifications"
          >
            <div>
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd group"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                      data-testid="navbar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="sc-bdnxRM NjstW p-1"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="flex absolute top-1 right-1 justify-center items-center p-1 rounded-full transition-all duration-100 ease-linear bg-theme-background dark:group-hover:bg-theme-secondary-800 group-hover:bg-theme-primary-100"
                        >
                          <div
                            class="w-2 h-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--send"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex items-center"
            >
              <div
                class="NavigationBar__NavigationButtonWrapper-sc-1nkmx4c-2 jTnlvd"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm"
                  data-testid="navbar__buttons--receive"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdnxRM NjstW p-1"
                      height="20"
                      width="20"
                    >
                      <svg>
                        qr-code.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 space-x-4"
            data-testid="navigationBar__userInfo"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-semibold text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="text-sm font-bold text-theme-secondary-text dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="AmountCrypto"
                >
                  0 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <div
                  class="relative justify-center items-center align-middle rounded-full cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="Profile Avatar"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      />
                      <span
                        class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                      >
                        JO
                      </span>
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-between items-end bg-theme-background"
          >
            <div
              class="space-y-4"
            >
              <h1
                class="mb-0 text-2xl"
                data-testid="header__title"
              >
                Exchange
              </h1>
              <div
                class="text-theme-secondary-text"
                data-testid="header__subtitle"
              >
                Choose one of the exchange providers below to swap directly from within the wallet.
              </div>
            </div>
          </div>
        </div>
      </div>
      <nav
        class="ExchangeNavigationBar__NavWrapper-sc-14kvz9e-0 jmecXr"
      >
        <div
          class="container flex justify-between items-center px-10 mx-auto"
        >
          <div
            class="-mx-6 w-full"
          >
            <div
              class="Tabs__TabList-sc-1t8sbwb-1 bVYhpi w-full h-18"
            >
              <button
                aria-selected="true"
                class="Tabs__TabButton-sc-1t8sbwb-0 ring-focus"
                data-ring-focus-margin="-mx-3"
                data-testid="tabs__tab-button-EXCHANGES"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span>
                  Exchanges
                </span>
              </button>
              <button
                aria-selected="false"
                class="Tabs__TabButton-sc-1t8sbwb-0 ring-focus"
                data-ring-focus-margin="-mx-3"
                data-testid="tabs__tab-button-TRANSACTIONS"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <span>
                  Transactions
                </span>
                <span
                  class="py-0.5 px-1.5 ml-2 text-sm font-semibold rounded bg-theme-primary-100 dark:bg-theme-secondary-900"
                  data-testid="tabs__tab-button-TRANSACTIONS-count"
                >
                  0
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 efrBqv"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="grid grid-cols-3 w-full gap-4.5"
            data-testid="ExchangeGrid"
          >
            <div
              data-testid="ExchangeCard--changenow"
            >
              <div>
                <button
                  class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
                  data-testid="Card"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <div
                      class="overflow-hidden flex-shrink-0 rounded-lg w-11 h-11"
                    >
                      <img
                        alt="ChangeNOW Logo"
                        class="object-cover w-full h-full"
                        src="https://exchanges.payvo.com/images/changenow/thumbnail.png"
                      />
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <div
                        class="truncate font-semibold text-lg link"
                      >
                        ChangeNOW
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
            </div>
            <div
              data-testid="ExchangeCard--changelly"
            >
              <div>
                <button
                  class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
                  data-testid="Card"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <div
                      class="overflow-hidden flex-shrink-0 rounded-lg w-11 h-11"
                    >
                      <img
                        alt="Changelly Logo"
                        class="object-cover w-full h-full"
                        src="https://exchanges.payvo.com/images/changelly/thumbnail.png"
                      />
                    </div>
                    <div
                      class="flex flex-col truncate"
                    >
                      <div
                        class="truncate font-semibold text-lg link"
                      >
                        Changelly
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
